--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
-#main > h1{
-  background-color: blue;
+.button{
+  background-color: green;
+  border: none;
+  outline: none;
+  border-radius: 100px;
+  padding: 5px 20px;
+  cursor: pointer;
+
+}
+.active-button{
+  background-color: red;
+  border: none;
+  outline: none;
+  border-radius: 100px;
+  padding: 5px 20px;
+  border: 1px solid blue;
   color: white;
+  cursor: no-drop;
+  opacity: 0.5;
 }
